<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simply Tone Generator</string>
    <string name="title_section1">DTMF</string>
    <string name="title_section2">Tone</string>
    <string name="title_section3">Section 3</string>

    <!-- ============ -->
    <!-- HelperCommon -->
    <!-- ============ -->

    <string name="sa_quote">\"The function of good software is to make the complex appear to be simple.\"\n- Grady Booch\n</string>
    <string name="sa_email"><a href="http://simplyadvanced.net/">http://simplyadvanced.net</a></string>
    <string name="sa_feedback">Please send feedback to:\n<a href="mailto:feedback@simplyadvanced.net?subject=Android:%20My%20App%20Feedback">feedback@simplyadvanced.net</a></string>

    <!-- ======= -->
    <!-- PHRASES -->
    <!-- ======= -->

    <string name="phrase_about">About</string>
    <string name="phrase_email">Email</string>
    <string name="phrase_feedback">Feedback</string>
    <string name="phrase_help">Help</string>
    <string name="phrase_rate_app">Rate app</string>
    <string name="phrase_send_feedback">Send feedback</string>
    <string name="phrase_settings">Settings</string>
    <string name="title_activity_activity_preferences">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    
    <!-- ======== -->
    <!-- SETTINGS -->
    <!-- ======== -->
    
    
    <string name="pref_continuous_dtmf_tones">pref_continuous_dtmf_tones</string>
    <string name="pref_time_for_tone">pref_time_for_tone</string>
    <string name="pref_time_for_pause">pref_time_for_pause</string>
    <string name="pref_show_letters_with_dtmf_numbers">pref_show_letters_with_dtmf_numbers</string>
    
</resources>
