<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/pref_continuous_dtmf_tones"
        android:title="Continuous DTMF tones" />
        
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/pref_show_letters_with_dtmf_numbers"
        android:title="Letters with DTMF numbers" />

    <PreferenceCategory android:title="DTMF Playback" >
        
        <EditTextPreference
            android:defaultValue="93"
            android:dialogTitle="Tone playback (ms)"
            android:inputType="number"
            android:key="@string/pref_time_for_tone"
            android:summary="93 milliseconds"
            android:title="Tone" />
        
        <EditTextPreference
            android:defaultValue="40"
            android:dialogTitle="Pause time (ms)"
            android:inputType="number"
            android:key="@string/pref_time_for_pause"
            android:summary="40 milliseconds"
            android:title="Pause" />
        
    </PreferenceCategory>

    
    <!-- <ListPreference -->
    <!-- android:entries="array/list" -->
    <!-- android:key="pref_editWaitTime" -->
    <!-- android:summary="Choose time between cycles" -->
    <!-- android:title="Edit wait time" /> -->


    <!-- <RingtonePreference -->
    <!-- android:key="button_voicemail_ringtone_key" -->
    <!-- android:ringtoneType="notification" -->
    <!-- android:title="Set notification sound" /> -->


    <!-- <PreferenceCategory android:title="Beta Features" > -->
    <!-- <CheckBoxPreference -->
    <!-- android:defaultValue="false" -->
    <!-- android:key="pref_key_auto_delete" -->
    <!-- android:summary="asdf" -->
    <!-- android:title="asdf" /> -->


    <!-- <Preference -->
    <!-- android:dependency="pref_key_auto_delete" -->
    <!-- android:key="pref_key_sms_delete_limit" -->
    <!-- android:summary="asdfg" -->
    <!-- android:title="asdfg" /> -->
    <!-- </PreferenceCategory> -->

</PreferenceScreen>